--- a/less/stories.css
+++ b/less/stories.css
@@ -1,6 +1,7 @@
 body {
   margin: 0;
   font-size: 1.6rem;
+  overflow-x: hidden;
 }
 body a {
   text-decoration: none;
@@ -38,7 +39,6 @@ body .wraper .header .header-wraper_logo_nav .logo {
   min-width: 108px;
   margin-right: 40px;
   width: 100%;
-  font-size: 16px;
 }
 body .wraper .header .header-wraper_logo_nav .logo img {
   width: 100%;
@@ -71,6 +71,7 @@ body .wraper .header .header-wraper_logo_nav .nav-navigator .site-navigator-wrap
 body .wraper .header .header-wraper_logo_nav .nav-navigator .site-navigator-wraper .navigator-wraper .navigator-menu {
   display: flex;
   flex-flow: row nowrap;
+  align-items: center;
   margin: 0;
   list-style: none;
   padding: 0;
@@ -92,12 +93,14 @@ body .wraper .header .header-wraper_logo_nav .nav-navigator .site-navigator-wrap
   display: flex;
   flex-flow: row nowrap;
   font-weight: 400;
+  font-size: 16px;
   margin: 0;
   padding: 16px 30px 16px 10px;
   transition: color 0.2s ease-out;
   z-index: 10;
   text-decoration: none;
   line-height: 1.2;
+  position: relative;
 }
 body .wraper .header .header-wraper_logo_nav .nav-navigator .site-navigator-wraper .navigator-wraper .navigator-menu li a:hover {
   color: #008248;
@@ -110,10 +113,18 @@ body .wraper .header .header-wraper_logo_nav .nav-navigator .site-navigator-wrap
   width: 16px;
   height: 16px;
   margin-left: 16px;
+  display: inline-block;
+  position: relative;
+  bottom: 0;
 }
 body .wraper .header .header-wraper_logo_nav .nav-navigator .site-navigator-wraper .navigator-wraper .navigator-menu li a span svg {
   width: 16px;
   height: 16px;
+  display: block;
+  height: 100%;
+  left: 0;
+  position: absolute;
+  top: 0;
 }
 body .wraper .header .header-wraper_logo_nav .nav-navigator .site-navigator-wraper .navigator-wraper .navigator-menu li:hover ul {
   display: block;
@@ -144,11 +155,9 @@ body .wraper .header .header-wraper_logo_nav .nav-navigator .site-navigator-wrap
 body .wraper .header .header-wraper_logo_nav .nav-navigator .site-navigator-wraper .navigator-wraper .navigator-site {
   width: 400px;
   display: flex;
-  justify-content: flex-end;
   align-items: center;
   flex-flow: nowrap;
   margin-left: auto;
-  margin-top: 0;
 }
 body .wraper .header .header-wraper_logo_nav .nav-navigator .site-navigator-wraper .navigator-wraper .navigator-site .site-language {
   flex: 0 0 auto;
@@ -231,10 +240,7 @@ body .wraper .header .header-wraper_logo_nav .nav-navigator .site-navigator-wrap
   height: 16px;
 }
 body .wraper .main-content {
-  margin-top: 90px;
-  margin-bottom: 100px;
-  margin-left: auto;
-  margin-right: auto;
+  margin: 90px auto 100px;
   padding: 0 10px;
   background-color: #faf7f7;
   max-width: 1440px;
@@ -586,7 +592,7 @@ body .wraper .main-content .content .content-wrap .layout-2col .layout-block .po
   letter-spacing: 3px;
   text-transform: uppercase;
 }
-body .wraper .main-content .content .content-wrap .layout-2col .layout-block .posts-list .posts-list-item .news-article .list-item-link h3 {
+body .wraper .main-content .content .content-wrap .layout-2col .layout-block .posts-list .posts-list-item .news-article .list-item-link .list-item-title {
   color: #000;
   font-weight: 500;
   line-height: 1.3;
@@ -594,14 +600,15 @@ body .wraper .main-content .content .content-wrap .layout-2col .layout-block .po
   text-decoration: none;
   transition: color 0.2s ease-out;
 }
-body .wraper .main-content .content .content-wrap .layout-2col .layout-block .posts-list .posts-list-item .news-article .list-item-link h3:hover {
+body .wraper .main-content .content .content-wrap .layout-2col .layout-block .posts-list .posts-list-item .news-article .list-item-link .list-item-title:hover {
   color: #008248;
 }
-body .wraper .main-content .content .content-wrap .layout-2col .layout-block .posts-list .posts-list-item .news-article .list-item-link p {
+body .wraper .main-content .content .content-wrap .layout-2col .layout-block .posts-list .posts-list-item .news-article .list-item-link .list-item-excerpt {
   color: #575757;
   font-weight: 300;
   line-height: 1.75;
   margin: 0 0 16px;
+  text-align: start;
 }
 body .wraper .main-content .content .content-wrap .title-center {
   text-align: center;
@@ -937,7 +944,6 @@ body .wraper .site-footer .site-footer-container .legal-nav .legal-nav-ul {
   text-transform: uppercase;
 }
 body .wraper .site-footer .site-footer-container .legal-nav .legal-nav-ul .legal-nav-li {
-  position: relative;
   margin: 0 10px 0 0;
 }
 body .wraper .site-footer .site-footer-container .legal-nav .legal-nav-ul .legal-nav-li a {
@@ -997,4 +1003,7 @@ body .wraper .site-footer .site-footer-container .language-switcher .region-sele
 body .wraper .site-footer .site-footer-container .language-switcher .region-select .region-select_name {
   margin-right: 8px;
   text-transform: uppercase;
+}
+body .wraper .site-footer .site-footer-container .language-switcher .region-select .region-select_site span {
+  margin: 0 8px;
 }
