--- a/less/stories.less
+++ b/less/stories.less
@@ -1,6 +1,7 @@
 body {
   margin: 0;
   font-size: 1.6rem;
+  overflow-x: hidden;
 
   a {
     text-decoration: none;
@@ -39,7 +40,6 @@ body {
           min-width: 108px;
           margin-right: 40px;
           width: 100%;
-          font-size: 16px;
 
           img {
             width: 100%;
@@ -74,6 +74,7 @@ body {
               .navigator-menu {
                 display: flex;
                 flex-flow: row nowrap;
+                align-items: center;
                 margin: 0;
                 list-style: none;
                 padding: 0;
@@ -95,12 +96,14 @@ body {
                     display: flex;
                     flex-flow: row nowrap;
                     font-weight: 400;
+                    font-size: 16px;
                     margin: 0;
                     padding: 16px 30px 16px 10px;
                     transition: color .2s ease-out;
                     z-index: 10;
                     text-decoration: none;
                     line-height: 1.2;
+                    position: relative;
 
                     &:hover {
                       color: #008248;
@@ -115,10 +118,18 @@ body {
                       width: 16px;
                       height: 16px;
                       margin-left: 16px;
+                      display: inline-block;
+                      position: relative;
+                      bottom: 0;
 
                       svg {
                         width: 16px;
                         height: 16px;
+                        display: block;
+                        height: 100%;
+                        left: 0;
+                        position: absolute;
+                        top: 0;
                       }
                     }
                   }
@@ -159,11 +170,10 @@ body {
               .navigator-site {
                 width: 400px;
                 display: flex;
-                justify-content: flex-end;
+                //justify-content: flex-end;
                 align-items: center;
                 flex-flow: nowrap;
                 margin-left: auto;
-                margin-top: 0;
 
                 .site-language {
                   flex: 0 0 auto;
@@ -264,10 +274,7 @@ body {
     }
 
     .main-content {
-      margin-top: 90px;
-      margin-bottom: 100px;
-      margin-left: auto;
-      margin-right: auto;
+      margin: 90px auto 100px;
       padding: 0 10px;
       background-color: #faf7f7;
       max-width: 1440px;
@@ -669,7 +676,7 @@ body {
                         text-transform: uppercase;
                       }
 
-                      h3 {
+                      .list-item-title {
                         color: #000;
                         font-weight: 500;
                         line-height: 1.3;
@@ -680,13 +687,13 @@ body {
                         &:hover {
                           color: #008248;
                         }
-                      }
-
-                      p {
+                      }             
+                       .list-item-excerpt{
                         color: #575757;
                         font-weight: 300;
                         line-height: 1.75;
                         margin: 0 0 16px;
+                        text-align: start;
                       }
                     }
                   }
@@ -1095,7 +1102,6 @@ body {
             text-transform: uppercase;
 
             .legal-nav-li {
-              position: relative;
               margin: 0 10px 0 0;
 
               a {
@@ -1169,6 +1175,11 @@ body {
             .region-select_name {
               margin-right: 8px;
               text-transform: uppercase;
+            }
+            .region-select_site {
+              span {
+                margin: 0 8px;
+              }
             }
           }
         }
